WEB-1287 Added css fixes for alerts, search on mobile.

--- a/src/client/styles/components/_search.scss
+++ b/src/client/styles/components/_search.scss
@@ -178,12 +178,12 @@
   .icon {
     background-color: #FFFFFF;
     color: $BG_MENU_SEARCH;
-    display: inline-block;
+    display: block;
     font-size: 20px;
     left: 2px;
     padding: 0;
     position: absolute;
-    top: 22px;
+    top: 21px;
 
     @include desktop {
       display:none;
@@ -207,7 +207,6 @@
   height: 66px;
   padding: 0 0 0 25px !important;
   width: 100%;
-  height: 80px;
 
   &:focus {
     outline: 0;
